--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
       body { background: white; transition: .1s opacity ease-in .1s; opacity: 0; }
       body.ready { opacity: 1; }
     </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
   </head>
   <body ${bodyAttrs}>
     ${app}
