Add cloudflare analytics

--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,8 @@
   <body ${bodyAttrs}>
     ${app}
     ${scripts}
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9d15963482ed4ad4ad66a09e8112c4ee"}'></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
