--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,16 @@
   <head>
     ${head}
     <style>
-      html {
-        background-color: #FFAE0C;
-        background-image: url('/outline.svg');
-        background-position: center;
-        background-size: auto 50%;
-        background-repeat: no-repeat;
-        width: 100vw;
-        height: 100vh;
-      }
-      body { background: white; transition: .1s opacity ease-in .1s; opacity: 0; }
-      body.ready { opacity: 1; }
+      html {background-color:#FFAE0C;background-image:url('/outline.svg');background-position:center;background-size:auto 50%;background-repeat:no-repeat;width:100vw;height:100vh;}
+      body {background:white;transition: .1s opacity ease-in .1s;opacity: 0;}
+      body.ready {opacity:1;}
     </style>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://cdn.activechristianity.org">
-    <link async href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
   </head>
   <body ${bodyAttrs}>
     ${app}
     ${scripts}
-    <!-- Cloudflare Web Analytics -->
     <script defer async src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9d15963482ed4ad4ad66a09e8112c4ee"}'></script>
-    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
