--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     ${head}
     <style>
       html {background-color:#FFAE0C;background-image:url('/outline.svg');background-position:center;background-size:auto 50%;background-repeat:no-repeat;width:100vw;height:100vh;}
-      body {background:white;transition: .1s opacity ease-in .1s;opacity: 0;}
+      body {background:white;transition: .2s opacity ease-in;opacity: 0;}
       body.ready {opacity:1;}
     </style>
     <link rel="preconnect" href="https://cdn.activechristianity.org">
