--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
       body.ready {opacity:1;}
     </style>
     <link rel="preconnect" href="https://cdn.activechristianity.org">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,300&family=Source+Sans+Pro:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
   </head>
   <body ${bodyAttrs}>
     ${app}
